hphp/test/zend/good/tests/lang/042.php.expectf
foo

Fatal error: Class undefined: B in %s/042.php on line 13
